[tool.poetry]
name = "dieter"
version = "0.1.0"
description = ""
authors = ["42zoko9 <hexproof1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
pandas = "^1.3.0"
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
pytest = "^6.2.4"
isort = "^5.9.2"
tox = "^3.24.0"
google-cloud-storage = "^1.42.3"
freezegun = "^1.1.0"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
